# ghTimeLine

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  vorbere.yaml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
docs/plan/: v1.md
docs/specifications/: README.md  application-behavior.md  configuration.md  errors-and-status.md  persistence.md  refresh-and-api.md  saved-queries.md  stream-view.md  validation-coverage.md
docs/user-guides/: README.md  desktop-app.md  getting-started.md  local-data.md  refreshing-streams.md  saved-queries.md  stream-view.md
src/: config.rs  lib.rs  main.rs  models.rs  saved_query_io.rs  sync.rs
src/app/: filter_stream_actions.rs  fonts.rs  item_actions.rs  mark_read_actions.rs  mod.rs  preferences.rs  refresh.rs  saved_queries.rs  saved_query_crud.rs  saved_query_transfer.rs  setup.rs  stream.rs  tests.rs  view.rs
src/app/components/: author_avatar.rs  item_list.rs  left_pane.rs  menu_bar.rs  mod.rs  relative_time.rs  remote_updates_banner.rs  saved_query_manager.rs  selectable_row.rs  status_bar.rs  status_icon.rs  toolbar.rs
src/github/: client.rs  discussion.rs  graphql.rs  graphql_types.rs  legacy.rs  mod.rs  project.rs  project_types.rs  rest.rs
src/models/: config.rs  mod.rs  saved_query.rs  stream_item.rs  view.rs
src/storage/: items.rs  mod.rs  queries.rs  schema.rs
tests/: refresh.rs  smoke.rs  storage_items.rs  ui_components.rs  ui_item_list.rs  ui_left_pane.rs  ui_toolbar.rs
tests/support/: item_list.rs  left_pane.rs  toolbar.rs
(+19 files in other folders)
