[package]
name = "gh_stream_listner"
version = "0.1.0"
edition = "2021"
description = "GitHub Stream reader for saved search queries"
license = "MIT"
repository = ""
readme = "README.md"

[[bin]]
name = "ghStreamListner"
path = "src/main.rs"

[dependencies]
eframe = "0.33"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

